--- a/IDE/ui/problems.html
+++ b/IDE/ui/problems.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test.oj</title>
+    <title>CodeX - Problem List</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="main.css"> -->
     <!-- Font Awesome -->
@@ -50,7 +50,7 @@
             </svg>
             -->
             &nbsp;
-            <span class="fs-4"><h2>test.oj</h2></span>
+            <span class="fs-4"><h2>CodeX</h2></span>
           </a>
     
           <ul class="nav nav-pills">
