--- a/IDE/ui/uploadProblem.html
+++ b/IDE/ui/uploadProblem.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test.oj</title>
+    <title>CodeX - Upload Problem</title>
     <!-- Font Awesome -->
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -102,7 +102,7 @@
         -->
       
         &nbsp;
-        <span class="fs-4"><h2>test.oj</h2></span>
+        <span class="fs-4"><h2>CodeX</h2></span>
       </a>
 
       <ul class="nav nav-pills">
