--- a/IDE/ui/users/0xc8f1f4f9eD658003c698781E8878ab69A1347AaF.html
+++ b/IDE/ui/users/0xc8f1f4f9eD658003c698781E8878ab69A1347AaF.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test.oj</title>
+    <title>CodeX - User</title>
     <link rel="stylesheet" href="../css/user.css">
     <link rel="stylesheet" href="../css/style.css">
     <!-- Font Awesome -->
@@ -56,7 +56,7 @@
         -->
 
         &nbsp;
-        <span class="fs-4"><h2>test.oj</h2></span>
+        <span class="fs-4"><h2>CodeX</h2></span>
       </a>
 
       <ul class="nav nav-pills">
